<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MyToolBar"
    android:elevation="5dp"
    >

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/back"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:src="@drawable/back"
        />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tv_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/menu"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:visibility="gone"
        />

</RelativeLayout>