<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:ignore="ContentDescription,ButtonStyle,SmallSp,HardcodedText">

    <ImageView
        android:id="@+id/iv_img"
        android:layout_width="@dimen/qb_px_100"
        android:layout_height="@dimen/qb_px_100"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/show_image"
        android:src="@drawable/img_default"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_pay_status"
        android:layout_width="@dimen/qb_px_100"
        android:layout_height="@dimen/qb_px_100"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_700"
        android:gravity="center"
        android:text="已下架"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_settop"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="老白干"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/ll_platforms"
        app:layout_constraintLeft_toRightOf="@id/iv_img"
        app:layout_constraintRight_toLeftOf="@id/iv_action_top"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat"/>

    <ImageView
        android:id="@+id/iv_action_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:src="@drawable/action_top_up"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/ll_platforms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/qb_px_2"
        android:layout_marginTop="@dimen/qb_px_2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/tv_upc_code"
        app:layout_constraintLeft_toLeftOf="@id/tv_name"
        app:layout_constraintRight_toRightOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name">

        <TextView
            android:id="@+id/tv_platfrom0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_stroke3_color700"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:paddingTop="2dp"
            android:text="京"
            android:textColor="@color/color_700"
            android:textSize="8sp"
            />

        <TextView
            android:id="@+id/tv_platfrom1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_stroke3_color700"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:paddingTop="2dp"
            android:text="美"
            android:textColor="@color/color_700"
            android:textSize="8sp"
            />

        <TextView
            android:id="@+id/tv_platfrom2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_stroke3_color700"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:paddingTop="2dp"
            android:text="饿"
            android:textColor="@color/color_700"
            android:textSize="8sp"
            />

        <TextView
            android:id="@+id/tv_platfrom3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_stroke3_color700"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:paddingTop="2dp"
            android:text="饿百"
            android:textColor="@color/color_700"
            android:textSize="8sp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_upc_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/qb_px_10"
        android:layout_marginTop="3dp"
        android:singleLine="true"
        android:text="upcCode"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_platforms"
        />

    <LinearLayout
        android:id="@+id/ll_price_inventory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/iv_img"
        app:layout_constraintLeft_toLeftOf="@id/tv_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_upc_code"
        >

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="¥ 55.44"
            android:textColor="@color/red"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/tv_inventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="库存未知"
            android:textSize="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_action"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_img">

        <Button
            android:id="@+id/btn_update_price_inventory"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/shape_corners6_colormain"
            android:text="@string/update_price_inventory"
            android:textColor="@color/white"
            android:textSize="10sp"
            />

        <Button
            android:id="@+id/btn_set_the_shelves"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_corners6_colormain"
            android:text="@string/set_the_shelves"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="ButtonStyle,RtlCompat"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>